fix: gridster width error when has scrollbar

--- a/webapp/app/layout/default-layout/default-layout.component.scss
+++ b/webapp/app/layout/default-layout/default-layout.component.scss
@@ -14,6 +14,7 @@ mat-toolbar {
   z-index: 10;
   position: sticky;
   > h2 {
+    flex: 1 1 auto;
     margin: 0px 0px 0px 16px;
     display: flex;
     align-items: center;
@@ -45,6 +46,8 @@ mat-sidenav-content {
   flex-flow: column nowrap;
   > main {
     flex: 1 1 auto;
+    display: flex;
+    flex-flow: column nowrap;
   }
 }
 
